--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -45,4 +45,4 @@ jobs:
       - name: Lint Code Base
         uses: docker://github/super-linter:v2.2.0
         env:
-          VALIDATE_ALL_CODEBASE: true
+          VALIDATE_ALL_CODEBASE: false
